--- a/src/app/pages/categoria/audiina/audiina.page.html
+++ b/src/app/pages/categoria/audiina/audiina.page.html
@@ -3,47 +3,21 @@
 </ion-header>
 <!--################################################PRODUCTOS########################################-->
 <ion-content [fullscreen]="true">
-
   <ion-grid>
-    <ion-card-title>Audífonos Inalámbricos</ion-card-title>
+    <ion-card-title>Audífonos Bluetooth</ion-card-title>
     <!--PRIMER PRODUCTO-->
     <ion-row>
-      <p [routerLink]="['/ai1']">
-        <ion-card>
-          <ion-img src="assets/AUDIFONOS BLUTU/a1.jpg" alt="aqui habia una imagen"></ion-img>
-          <ion-card-header>
-            <ion-card-title class="ion-title">Audífonos Bluetooth<br>morados</ion-card-title>
-            <ion-card-content>
-              <p>$39.990</p>
-            </ion-card-content>
-          </ion-card-header>
-        </ion-card>
-      </p>
-      <!--SEGUNDO PRODUCTO-->
-      <p [routerLink]="['/ai4']">
-        <ion-card>
-          <ion-img src="assets/AUDIFONOS BLUTU/a4.jpg" alt="aqui habia una imagen"></ion-img>
-          <ion-card-header>
-            <ion-card-title class="ion-title">Audífonos Bluetooth<br>azules</ion-card-title>
-            <ion-card-content>
-              <p>$42.000</p>
-            </ion-card-content>
-          </ion-card-header>
-        </ion-card>
-      </p>
-      <!--TERCER PRODUCTO-->
-      <p [routerLink]="['/ai6']">
-        <ion-card>
-          <ion-img src="assets/AUDIFONOS BLUTU/a6.jpg" alt="aqui habia una imagen"></ion-img>
-          <ion-card-header>
-            <ion-card-title class="ion-title">Audífonos Bluetooth<br>verdes</ion-card-title>
-            <ion-card-content>
-              <p>$269.000</p>
-            </ion-card-content>
-          </ion-card-header>
-        </ion-card><br><br>
-      </p>
+      <ion-card *ngFor="let producto of ArregloMostrar">
+        <ion-img [src]="producto.foto" alt="aqui habia una imagen"></ion-img>
+        <ion-card-header>
+          <ion-card-title class="ion-title">{{ producto.nombreProducto }}</ion-card-title>
+          <ion-card-content>
+            <p>${{ producto.precio }}</p>
+          </ion-card-content>
+        </ion-card-header>
+      </ion-card>
     </ion-row>
   </ion-grid>
+  <br><br><br>
   <app-componente2></app-componente2>
 </ion-content>
