--- a/src/app/pages/categoria/relojdig/relojdig.page.html
+++ b/src/app/pages/categoria/relojdig/relojdig.page.html
@@ -3,48 +3,21 @@
 </ion-header>
 <!--################################################PRODUCTOS########################################-->
 <ion-content [fullscreen]="true">
-
   <ion-grid>
     <ion-card-title>Relojes Digitales</ion-card-title>
-
+    <!--PRIMER PRODUCTO-->
     <ion-row>
-      <!--PRIMER PRODUCTO-->
-      <p [routerLink]="['/rd2']">
-        <ion-card>
-          <ion-img src="assets/digitales/rd2.jpeg" alt="aqui habia una imagen"></ion-img>
-          <ion-card-header>
-            <ion-card-title class="ion-title">Reloj Digital negro<br> con borde azul</ion-card-title>
-            <ion-card-content>
-              <p>$61.990</p>
-            </ion-card-content>
-          </ion-card-header>
-        </ion-card>
-      </p>
-      <!--SEGUNDO PRODUCTO-->
-      <p [routerLink]="['/rd5']">
-        <ion-card>
-          <ion-img src="assets/digitales/rd5.jpg" alt="aqui habia una imagen"></ion-img>
-          <ion-card-header>
-            <ion-card-title class="ion-title">Reloj Digital<br>negro</ion-card-title>
-            <ion-card-content>
-              <p>$54.000</p>
-            </ion-card-content>
-          </ion-card-header>
-        </ion-card>
-      </p>
-      <!--TERCER PRODUCTO-->
-      <p [routerLink]="['/rd6']">
-        <ion-card>
-          <ion-img src="assets/digitales/rd6.jpeg" alt="aqui habia una imagen"></ion-img>
-          <ion-card-header>
-            <ion-card-title class="ion-title">Reloj Digital<br>blanco</ion-card-title>
-            <ion-card-content>
-              <p>$194.550</p>
-            </ion-card-content>
-          </ion-card-header>
-        </ion-card><br><br>
-      </p>
+      <ion-card *ngFor="let producto of ArregloMostrar">
+        <ion-img [src]="producto.foto" alt="aqui habia una imagen"></ion-img>
+        <ion-card-header>
+          <ion-card-title class="ion-title">{{ producto.nombreProducto }}</ion-card-title>
+          <ion-card-content>
+            <p>${{ producto.precio }}</p>
+          </ion-card-content>
+        </ion-card-header>
+      </ion-card>
     </ion-row>
   </ion-grid>
+  <br><br><br>
   <app-componente2></app-componente2>
 </ion-content>
