--- a/src/app/pages/categoria/relojsma/relojsma.page.html
+++ b/src/app/pages/categoria/relojsma/relojsma.page.html
@@ -3,47 +3,21 @@
 </ion-header>
 <!--################################################PRODUCTOS########################################-->
 <ion-content [fullscreen]="true">
-
   <ion-grid>
     <ion-card-title>Relojes Smartwatch</ion-card-title>
     <!--PRIMER PRODUCTO-->
     <ion-row>
-      <p [routerLink]="['/rs1']">
-        <ion-card>
-          <ion-img src="assets/SMARTWATCH/rs1.webp" alt="aqui habia una imagen"></ion-img>
-          <ion-card-header>
-            <ion-card-title class="ion-title">Reloj Smartwatch<br>Azul</ion-card-title>
-            <ion-card-content>
-              <p>$139.000</p>
-            </ion-card-content>
-          </ion-card-header>
-        </ion-card>
-      </p>
-      <!--SEGUNDO PRODUCTO-->
-      <p [routerLink]="['/rs3']">
-        <ion-card>
-          <ion-img src="assets/SMARTWATCH/rs2.jpeg" alt="aqui habia una imagen"></ion-img>
-          <ion-card-header>
-            <ion-card-title class="ion-title">Reloj Smartwatch<br>anaranjado</ion-card-title>
-            <ion-card-content>
-              <p>$240.000</p>
-            </ion-card-content>
-          </ion-card-header>
-        </ion-card>
-      </p>
-      <!--TERCER PRODUCTO-->
-      <p [routerLink]="['/rs5']">
-        <ion-card>
-          <ion-img src="assets/SMARTWATCH/rs3.jpeg" alt="aqui habia una imagen"></ion-img>
-          <ion-card-header>
-            <ion-card-title class="ion-title">Reloj Smartwatch<br>morado</ion-card-title>
-            <ion-card-content>
-              <p>$360.000</p>
-            </ion-card-content>
-          </ion-card-header>
-        </ion-card><br><br>
-      </p>
+      <ion-card *ngFor="let producto of ArregloMostrar">
+        <ion-img [src]="producto.foto" alt="aqui habia una imagen"></ion-img>
+        <ion-card-header>
+          <ion-card-title class="ion-title">{{ producto.nombreProducto }}</ion-card-title>
+          <ion-card-content>
+            <p>${{ producto.precio }}</p>
+          </ion-card-content>
+        </ion-card-header>
+      </ion-card>
     </ion-row>
   </ion-grid>
+  <br><br><br>
   <app-componente2></app-componente2>
 </ion-content>
