--- a/src/app/listaregistros/listaregistros.page.html
+++ b/src/app/listaregistros/listaregistros.page.html
@@ -15,22 +15,32 @@
 
   <ion-searchbar placeholder="Buscar Noticia" ></ion-searchbar>
   <ion-list>
-    <ion-item-sliding *ngFor="let x of arregloProducto">      
+    <ion-item-sliding *ngFor="let x of arregloUsuario">      
   
       <ion-item>
         <ion-label>
-          <h2>{{ x.nombre }}</h2>
-          <p style="word-wrap: break-word;white-space: normal;">{{ x.descripcion }}</p>
+          <h2>{{ x.nombreU }}</h2>
+          <p style="word-wrap: break-word;white-space: normal;">{{ x.apellidoU }}</p>
         </ion-label>
       </ion-item>
   
-      
+      <ion-item-options>
+        <ion-item-option (click)="modificar(x)">
+          <ion-icon slot="bottom" name="pencil-sharp"></ion-icon>
+          Modificar
+        </ion-item-option>
+        <ion-item-option (click)="eliminar(x)" color="danger">
+          <ion-icon slot="bottom" name="trash"></ion-icon>
+          Eliminar
+        </ion-item-option>
+      </ion-item-options>
+
     </ion-item-sliding>
   </ion-list>
 
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button [routerLink]="['/agregar']">
+    <ion-fab-button >
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
