--- a/src/app/pages/inicio/datos-personales/datos-personales.page.html
+++ b/src/app/pages/inicio/datos-personales/datos-personales.page.html
@@ -6,7 +6,7 @@
 
 <ion-content class="fondo" [fullscreen]="true">
   <div class="circle">
-    <ion-img src="https://cdn-icons-png.flaticon.com/512/4645/4645949.png" alt=""></ion-img>
+    <ion-img [src]="imageData" alt="image"></ion-img>
   </div>
   <br><br><br>
   <ion-grid>
