--- a/src/app/pages/inicio/datos-personales/datos-personales.page.html
+++ b/src/app/pages/inicio/datos-personales/datos-personales.page.html
@@ -5,9 +5,9 @@
 <!--#############################################PRODUCTOS################################################-->
 
 <ion-content class="fondo" [fullscreen]="true">
-  <div class="circle">
-    <ion-img [src]="imageData" alt="image"></ion-img>
-  </div>
+  <ion-avatar class="circle">
+    <img  [src]="imageData" />
+  </ion-avatar>
   <br><br><br>
   <ion-grid>
     <ion-row>
