--- a/src/app/pages/inicio/inicio-sesion/inicio-sesion.page.html
+++ b/src/app/pages/inicio/inicio-sesion/inicio-sesion.page.html
@@ -9,7 +9,7 @@
       <div class="example-container">
         <mat-form-field style="width: 250px;">
           <mat-label>Ingresa tu Correo:</mat-label>
-          <input matInput placeholder="pat@example.com" required name="gmail" [(ngModel)]="gmail">
+          <input matInput placeholder="pat@example.com" required  name="gmail" [(ngModel)]="gmail">
           <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
         </mat-form-field>
       </div>
@@ -19,7 +19,7 @@
       <mat-form-field>
         <mat-label>Ingresa tu contraseña:</mat-label>
         <input matInput [type]="hide ? 'password' : 'text'" placeholder="*********" name="password"
-          [(ngModel)]="password">
+          [(ngModel)]="password" >
         <button style="color: white;" mat-icon-button matSuffix (click)="hide = !hide"
           [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
           <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
@@ -27,7 +27,7 @@
       </mat-form-field>
     </div>
     <!--BOTON-->
-    <ion-button (click)="inicio_sesion()">Iniciar sesión</ion-button>
+    <ion-button (click)="iniciarSesion()">Iniciar sesión</ion-button>
     <!--MENSAJITO PARA SABER SI TIENE O NO UNA CUENTA-->
     <p>¿Aún no tiene una cuenta?<a [routerLink]="['/registro']">Registrese</a></p>
     <p>¿Se le olvido su clave?<a [routerLink]="['/recuperar-clave']">Recuperela</a></p><br><br>
