--- a/src/app/pages/Shop/tienda/tienda.page.html
+++ b/src/app/pages/Shop/tienda/tienda.page.html
@@ -6,6 +6,7 @@
 <ion-content [fullscreen]="true">
 
   <!--VISTA DEL ADMIN-->
+
 <ion-grid class="ion-grid" *ngIf="rol == 2">
   <ion-row>
     <ion-card>
@@ -23,7 +24,6 @@
   </ion-row>
 </ion-grid>
 
-
   <!--VISTA DEL USUARIO-->
   <ion-grid>
     <ion-card-title>TimeTech Audible</ion-card-title>
@@ -37,15 +37,14 @@
           <ion-card-content>
             <td>${{ producto.precio }}</td>
             <ion-button class="center-buttons" [routerLink]="['/ag3', producto.idProducto]">Ver detalles</ion-button>
-            <ion-button class="center-buttons" *ngIf="rol == 2"
-              [routerLink]="['/editar-p-admin']">Modificar</ion-button>
-            <ion-button class="borrar" *ngIf="rol == 2">Eliminar</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 2" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="borrar" *ngIf="rol == 2" >Eliminar</ion-button>
           </ion-card-content>
         </ion-card-header>
-      </ion-card>
+      </ion-card>      
     </ion-row>
   </ion-grid>
-  <br><br><br>
+<br><br><br>
   <app-componente2></app-componente2>
 
 </ion-content>
