--- a/src/app/pages/Shop/tienda/tienda.page.html
+++ b/src/app/pages/Shop/tienda/tienda.page.html
@@ -6,23 +6,23 @@
 <ion-content [fullscreen]="true">
 
   <!--VISTA DEL ADMIN-->
-<ion-grid class="ion-grid" *ngIf="rol == 2">
-  <ion-row>
-    <ion-card>
-      <ion-card-title style="font-size: 40px;">Bienvenido Administrador</ion-card-title>
-      <ion-select interface="action-sheet">
-          <ion-select-option *ngFor="let usuario of usuarios" [value]="usuario.idUsuario">
+  <ion-grid class="ion-grid" *ngIf="rol == 2">
+    <ion-row>
+      <ion-card>
+        <ion-card-title style="font-size: 40px;">Bienvenido Administrador</ion-card-title>
+        <ion-row *ngIf="usuarios.length > 0">
+          <ion-col *ngFor="let usuario of usuarios">
             {{ usuario.nombreU }} {{ usuario.apellidoU }} - {{ usuario.correoU }}
-          </ion-select-option>
-        </ion-select>
-      <ion-row>
-        <ion-button class="center-buttons" shape="round" [routerLink]="['./tienda']">Ver usuarios</ion-button>
-        <ion-button class="center-buttons" shape="round" [routerLink]="['/agregar-p-admin']">Agregar productos</ion-button>
-      </ion-row>
-    </ion-card>
-  </ion-row>
-</ion-grid>
-
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-button class="center-buttons" shape="round" [routerLink]="['./tienda']">Ver usuarios</ion-button>
+          <ion-button class="center-buttons" shape="round" [routerLink]="['/agregar-p-admin']">Agregar
+            productos</ion-button>
+        </ion-row>
+      </ion-card>
+    </ion-row>
+  </ion-grid>
 
   <!--VISTA DEL USUARIO-->
   <ion-grid>
