--- a/src/app/pages/Shop/tienda/tienda.page.html
+++ b/src/app/pages/Shop/tienda/tienda.page.html
@@ -11,7 +11,7 @@
       <ion-card>
         <ion-card-title style="font-size: 40px;">Bienvenido Administrador</ion-card-title>
         <ion-row>
-          <ion-button class="center-buttons" shape="round" [routerLink]="['./tienda']">Ver usuarios</ion-button>
+          <ion-button class="center-buttons" shape="round" [routerLink]="['/lista-usuario']">Ver usuarios</ion-button>
           <ion-button class="center-buttons" shape="round" [routerLink]="['/agregar-p-admin']">Agregar productos</ion-button>
         </ion-row>
       </ion-card>
