--- a/src/app/pages/admin/lista-usuario/lista-usuario.page.html
+++ b/src/app/pages/admin/lista-usuario/lista-usuario.page.html
@@ -5,31 +5,13 @@
 <ion-content [fullscreen]="true">
   <ion-card-title>TimeTecheros</ion-card-title>
   <ion-list>
-    <ion-item>
-      <ion-avatar aria-hidden="true" slot="start">
-        <img alt="" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
-      </ion-avatar>
-      <ion-label>Huey</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-avatar aria-hidden="true" slot="start">
-        <img alt="" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
-      </ion-avatar>
-      <ion-label>Dewey</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-avatar aria-hidden="true" slot="start">
-        <img alt="" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
-      </ion-avatar>
-      <ion-label>Louie</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-avatar aria-hidden="true" slot="start">
-        <img alt="" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
-      </ion-avatar>
-      <ion-label>Fooie</ion-label>
-    </ion-item>
+    <ion-row *ngIf="usuarios.length > 0">
+      <ion-col *ngFor="let usuario of usuarios">
+        {{ usuario.nombreU }} {{ usuario.apellidoU }} - {{ usuario.correoU }}
+      </ion-col>
+    </ion-row>
   </ion-list>
+  
 
   <!--MENU DOS-->
   <app-componente2></app-componente2>
