--- a/src/app/pages/Shop/tienda/tienda.page.html
+++ b/src/app/pages/Shop/tienda/tienda.page.html
@@ -31,7 +31,7 @@
             <td>${{ producto.precio }}</td>
             <ion-button class="center-buttons" [routerLink]="['/ag3', producto.idProducto]">Ver detalles</ion-button>
             <ion-button class="center-buttons" *ngIf="rol == 2" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
-            <ion-button class="borrar" *ngIf="rol == 2" >Eliminar</ion-button>
+            <ion-button class="borrar" *ngIf="rol == 2" (click)="eliminar(producto)" >Eliminar</ion-button>
           </ion-card-content>
         </ion-card-header>
       </ion-card>      
